[gd_scene load_steps=70 format=2]

[ext_resource path="res://Cenas/Menu/background/gifuti-0061.jpg" type="Texture" id=1]
[ext_resource path="res://Cenas/Menu/background/gifuti-0067.jpg" type="Texture" id=2]
[ext_resource path="res://Cenas/Menu/background/gifuti-0039.jpg" type="Texture" id=3]
[ext_resource path="res://Cenas/Menu/background/gifuti-0038.jpg" type="Texture" id=4]
[ext_resource path="res://Cenas/Menu/background/gifuti-0041.jpg" type="Texture" id=5]
[ext_resource path="res://Cenas/Menu/background/gifuti-0045.jpg" type="Texture" id=6]
[ext_resource path="res://Cenas/Menu/background/gifuti-0070.jpg" type="Texture" id=7]
[ext_resource path="res://Cenas/Menu/background/gifuti-0074.jpg" type="Texture" id=8]
[ext_resource path="res://Cenas/Menu/background/gifuti-0037.jpg" type="Texture" id=9]
[ext_resource path="res://Cenas/Menu/background/gifuti-0047.jpg" type="Texture" id=10]
[ext_resource path="res://Cenas/Menu/background/gifuti-0068.jpg" type="Texture" id=11]
[ext_resource path="res://Cenas/Menu/background/gifuti-0065.jpg" type="Texture" id=12]
[ext_resource path="res://Cenas/Menu/background/gifuti-0043.jpg" type="Texture" id=13]
[ext_resource path="res://Cenas/Menu/background/gifuti-0059.jpg" type="Texture" id=14]
[ext_resource path="res://Cenas/Menu/background/gifuti-0050.jpg" type="Texture" id=15]
[ext_resource path="res://Cenas/Menu/background/gifuti-0046.jpg" type="Texture" id=16]
[ext_resource path="res://Cenas/Menu/sololed/led_zeppelin_stairway_to_heaven_solo_cover_-737625196242125147.wav" type="AudioStream" id=17]
[ext_resource path="res://Cenas/Menu/background/gifuti-0033.jpg" type="Texture" id=18]
[ext_resource path="res://Cenas/Menu/background/gifuti-0060.jpg" type="Texture" id=19]
[ext_resource path="res://Cenas/Menu/background/gifuti-0075.jpg" type="Texture" id=20]
[ext_resource path="res://Cenas/Menu/background/gifuti-0048.jpg" type="Texture" id=21]
[ext_resource path="res://Cenas/Menu/background/gifuti-0049.jpg" type="Texture" id=22]
[ext_resource path="res://Cenas/Menu/background/gifuti-0063.jpg" type="Texture" id=23]
[ext_resource path="res://Cenas/Menu/background/gifuti-0069.jpg" type="Texture" id=24]
[ext_resource path="res://Cenas/Menu/background/gifuti-0071.jpg" type="Texture" id=25]
[ext_resource path="res://Cenas/Menu/background/gifuti-0072.jpg" type="Texture" id=26]
[ext_resource path="res://Cenas/Menu/background/gifuti-0044.jpg" type="Texture" id=27]
[ext_resource path="res://Cenas/Menu/background/gifuti-0055.jpg" type="Texture" id=28]
[ext_resource path="res://Cenas/Menu/background/gifuti-0078.jpg" type="Texture" id=29]
[ext_resource path="res://Cenas/Menu/background/gifuti-0053.jpg" type="Texture" id=30]
[ext_resource path="res://Cenas/Menu/background/gifuti-0040.jpg" type="Texture" id=31]
[ext_resource path="res://Cenas/Menu/background/gifuti-0057.jpg" type="Texture" id=32]
[ext_resource path="res://Cenas/Menu/background/gifuti-0073.jpg" type="Texture" id=33]
[ext_resource path="res://Cenas/Menu/background/gifuti-0064.jpg" type="Texture" id=34]
[ext_resource path="res://Cenas/Menu/background/gifuti-0058.jpg" type="Texture" id=35]
[ext_resource path="res://Cenas/Menu/background/gifuti-0062.jpg" type="Texture" id=36]
[ext_resource path="res://Cenas/Menu/background/gifuti-0051.jpg" type="Texture" id=37]
[ext_resource path="res://Cenas/Menu/background/gifuti-0036.jpg" type="Texture" id=38]
[ext_resource path="res://Cenas/Menu/background/gifuti-0032.jpg" type="Texture" id=39]
[ext_resource path="res://Cenas/Menu/background/gifuti-0052.jpg" type="Texture" id=40]
[ext_resource path="res://Cenas/Menu/background/gifuti-0054.jpg" type="Texture" id=41]
[ext_resource path="res://Cenas/Menu/background/gifuti-0042.jpg" type="Texture" id=42]
[ext_resource path="res://Cenas/Menu/background/gifuti-0056.jpg" type="Texture" id=43]
[ext_resource path="res://Cenas/Menu/background/gifuti-0016.jpg" type="Texture" id=44]
[ext_resource path="res://Cenas/Menu/background/gifuti-0008.jpg" type="Texture" id=45]
[ext_resource path="res://Cenas/Menu/background/gifuti-0017.jpg" type="Texture" id=46]
[ext_resource path="res://Cenas/Menu/background/gifuti-0018.jpg" type="Texture" id=47]
[ext_resource path="res://Cenas/Menu/background/gifuti-0019.jpg" type="Texture" id=48]
[ext_resource path="res://Cenas/Menu/background/gifuti-0020.jpg" type="Texture" id=49]
[ext_resource path="res://Cenas/Menu/background/gifuti-0015.jpg" type="Texture" id=50]
[ext_resource path="res://Cenas/Menu/background/gifuti-0021.jpg" type="Texture" id=51]
[ext_resource path="res://Cenas/Menu/background/gifuti-0023.jpg" type="Texture" id=52]
[ext_resource path="res://Cenas/Menu/background/gifuti-0024.jpg" type="Texture" id=53]
[ext_resource path="res://Cenas/Menu/background/gifuti-0025.jpg" type="Texture" id=54]
[ext_resource path="res://Cenas/Menu/background/gifuti-0004.jpg" type="Texture" id=55]
[ext_resource path="res://Cenas/Menu/background/gifuti-0000.jpg" type="Texture" id=56]
[ext_resource path="res://Cenas/Menu/background/gifuti-0022.jpg" type="Texture" id=57]
[ext_resource path="res://Cenas/Menu/background/gifuti-0001.jpg" type="Texture" id=58]
[ext_resource path="res://Cenas/Menu/background/gifuti-0014.jpg" type="Texture" id=59]
[ext_resource path="res://Cenas/Menu/background/gifuti-0029.jpg" type="Texture" id=60]
[ext_resource path="res://Cenas/Menu/background/gifuti-0030.jpg" type="Texture" id=61]
[ext_resource path="res://Cenas/Menu/background/gifuti-0031.jpg" type="Texture" id=62]
[ext_resource path="res://Cenas/Menu/background/gifuti-0027.jpg" type="Texture" id=63]
[ext_resource path="res://Cenas/Menu/background/gifuti-0028.jpg" type="Texture" id=64]
[ext_resource path="res://Cenas/Menu/btnExit.tres" type="Texture" id=65]
[ext_resource path="res://Cenas/Menu/btnPlay.tres" type="Texture" id=66]
[ext_resource path="res://Cenas/Menu/Menu.gd" type="Script" id=67]
[ext_resource path="res://Cenas/Menu/titulo.png" type="Texture" id=68]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 56 ), ExtResource( 58 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 59 ), ExtResource( 50 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 51 ), ExtResource( 57 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 39 ), ExtResource( 18 ), ExtResource( 38 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 31 ), ExtResource( 5 ), ExtResource( 42 ), ExtResource( 13 ), ExtResource( 27 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 37 ), ExtResource( 40 ), ExtResource( 30 ), ExtResource( 41 ), ExtResource( 28 ), ExtResource( 43 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 1 ), ExtResource( 36 ), ExtResource( 23 ), ExtResource( 34 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 24 ), ExtResource( 7 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 33 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="MenuBackground" type="AnimatedSprite"]
scale = Vector2( 1.61, 1.27 )
frames = SubResource( 1 )
<<<<<<< HEAD
frame = 33
=======
frame = 43
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1
playing = true
centered = false
script = ExtResource( 67 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
<<<<<<< HEAD
volume_db = -20.194
=======
>>>>>>> b9db3fa24660512ab85b62eb31301a75344b87a1

[node name="JogarBotao" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.591
anchor_right = 0.5
anchor_bottom = 0.591
margin_left = -75.0
margin_top = -3.68002
margin_right = 427.0
margin_bottom = 152.32
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 66 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaitBotao" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.591
anchor_right = 0.5
anchor_bottom = 0.591
margin_left = -75.0
margin_top = 56.32
margin_right = 427.0
margin_bottom = 212.32
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Sprite" parent="."]
position = Vector2( 300, 120 )
texture = ExtResource( 68 )
[connection signal="pressed" from="JogarBotao" to="." method="_on_JogarBotao_pressed"]
[connection signal="pressed" from="SaitBotao" to="." method="_on_SaitBotao_pressed"]
